@@ -35,9 +35,7 @@ public class SecurityConfig {
     private final LogoutHandler logoutHandler;
 
     private static final String[] SWAGGER_WHITELIST = {
-            "/v3/api-docs/**",
-            "/swagger-ui/**",
-            "/swagger-ui.html"
+            "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html"
     };
 
     @Bean
@@ -46,14 +44,12 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(withDefaults())
                 .authorizeHttpRequests(auth -> auth
-                        // 1. Auth & Public Tooling Endpoints
-                        .requestMatchers(
-                                "/api/v1/auth/**" // All auth endpoints
-                        ).permitAll()
+                        // 1. Public Endpoints
+                        .requestMatchers("/api/v1/auth/**").permitAll()
                         .requestMatchers(SWAGGER_WHITELIST).permitAll()
                         .requestMatchers("/h2-console/**").permitAll()
 
-                        // 2. Public Read (GET) for all catalogue/product-related info
+                        // 2. Public Read Access (Catalog Browsing for Customers)
                         .requestMatchers(HttpMethod.GET,
                                 "/api/v1/products/**",
                                 "/api/v1/product-images/**",
@@ -61,48 +57,29 @@ public class SecurityConfig {
                                 "/api/v1/collections/**",
                                 "/api/v1/attribute-types/**",
                                 "/api/v1/attribute-values/**",
-                                "/api/v1/stock-items/**",
                                 "/api/v1/stores/**"
                         ).permitAll()
 
-                        // 3. Admin Write (POST, PUT, DELETE) for Core Catalogue
-                        .requestMatchers(HttpMethod.POST,
-                                "/api/v1/products/**",
-                                "/api/v1/product-images/**",
-                                "/api/v1/categories/**",
-                                "/api/v1/collections/**",
-                                "/api/v1/attribute-types/**",
-                                "/api/v1/attribute-values/**",
-                                "/api/v1/stores/**"
-                        ).hasAuthority("ADMIN")
-                        .requestMatchers(HttpMethod.PUT,
-                                "/api/v1/products/**",
-                                "/api/v1/product-images/**",
-                                "/api/v1/categories/**",
-                                "/api/v1/collections/**",
-                                "/api/v1/attribute-types/**",
-                                "/api/v1/attribute-values/**",
-                                "/api/v1/stores/**"
-                        ).hasAuthority("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE,
-                                "/api/v1/products/**",
-                                "/api/v1/product-images/**",
-                                "/api/v1/categories/**",
-                                "/api/v1/collections/**",
-                                "/api/v1/attribute-types/**",
-                                "/api/v1/attribute-values/**",
-                                "/api/v1/stores/**"
-                        ).hasAuthority("ADMIN")
+                        // 3. User Self-Management (Must be before general user rules)
+                        .requestMatchers(HttpMethod.GET, "/api/v1/users/me").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/users/me").authenticated()
 
-                        // 4. Stock Management - Admin OR Store Manager
-                        .requestMatchers(HttpMethod.POST, "/api/v1/stock-items/**").hasAnyAuthority("ADMIN", "STORE_MANAGER")
-                        .requestMatchers(HttpMethod.PUT, "/api/v1/stock-items/**").hasAnyAuthority("ADMIN", "STORE_MANAGER")
-                        .requestMatchers(HttpMethod.DELETE, "/api/v1/stock-items/**").hasAnyAuthority("ADMIN", "STORE_MANAGER")
+                        // 4. ADMIN ONLY: Store & Manager Assignment
+                        .requestMatchers(HttpMethod.POST, "/api/v1/stores/**").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/stores/**").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/v1/stores/**").hasAuthority("ROLE_ADMIN")
 
-                        // 5. Admin-only User Management
-                        .requestMatchers("/api/v1/users/**").hasAuthority("ADMIN")
+                        // 5. ADMIN & STORE MANAGER: Product Management
+                        .requestMatchers(HttpMethod.POST, "/api/v1/products/**", "/api/v1/product-images/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_STORE_MANAGER")
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/products/**", "/api/v1/product-images/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_STORE_MANAGER")
+                        .requestMatchers(HttpMethod.DELETE, "/api/v1/products/**").hasAuthority("ROLE_ADMIN") // Delete is Admin only safety
 
-                        // 6. All other requests must be authenticated
+                        // 6. ADMIN & STORE MANAGER: Stock/Inventory (Service layer enforces specific store ownership)
+                        .requestMatchers("/api/v1/stock-items/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_STORE_MANAGER")
+
+                        // 7. User Management (Restricted)
+                        .requestMatchers("/api/v1/users/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_STORE_MANAGER")
+
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -125,23 +102,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Updated Allowed Origins for your Jewellery App
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:5173", // For local development
-                "https://your-jewellery-frontend.com" // Placeholder for your production URL
-        ));
-
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
-        ));
-
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", "Content-Type", "Accept"
-        ));
-
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000")); // Adjust ports as needed
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
